Added New page for outbound links to all anchor tags

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,1 @@
-<div id="reset"></div><div class="header-container"><a href="#"><img class="logo" src="assets/img/website-logo.png"/></a></div>
+<div id="reset"></div><div class="header-container"><a href="new-page.html"><img class="logo" src="assets/img/website-logo.png"/></a></div>
