--- a/_pugfiles/blog-content.pug
+++ b/_pugfiles/blog-content.pug
@@ -1,5 +1,5 @@
 .blog-container
-	a(href="#").blog-post.first
+	a(href="new-page.html").blog-post.first
 		.blog-image
 
 		.blog-details
@@ -10,7 +10,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.second
+	a(href="new-page.html").blog-post.second
 		.blog-image
 
 		.blog-details
@@ -21,7 +21,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.third
+	a(href="new-page.html").blog-post.third
 		.blog-image
 
 		.blog-details
@@ -32,7 +32,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.fourth
+	a(href="new-page.html").blog-post.fourth
 		.blog-image
 
 		.blog-details
@@ -43,7 +43,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.fifth
+	a(href="new-page.html").blog-post.fifth
 		.blog-image
 
 		.blog-details
@@ -54,7 +54,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.sixth
+	a(href="new-page.html").blog-post.sixth
 		.blog-image
 
 		.blog-details
@@ -65,7 +65,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.seventh
+	a(href="new-page.html").blog-post.seventh
 		.blog-image
 
 		.blog-details
@@ -76,7 +76,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.eight
+	a(href="new-page.html").blog-post.eight
 		.blog-image
 
 		.blog-details
@@ -87,7 +87,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.nineth
+	a(href="new-page.html").blog-post.nineth
 		.blog-image
 
 		.blog-details
@@ -98,7 +98,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").blog-post.last.tenth
+	a(href="new-page.html").blog-post.last.tenth
 		.blog-image
 
 		.blog-details
@@ -109,7 +109,7 @@
 			.description
 				p サンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキストサンプルテキスト…
 
-	a(href="#").button
+	a(href="new-page.html").button
 		.filler
 		p More
 		img(src="assets/img/icn_arrow.png" alt="arrow")
