--- a/_pugfiles/footer.pug
+++ b/_pugfiles/footer.pug
@@ -1,7 +1,7 @@
 .footer-container
 	.footer-content
 		ul
-			li: a(href="#") 運営会社
-			li: a(href="#").kozgo 個人情報保護について
+			li: a(href="new-page.html") 運営会社
+			li: a(href="new-page.html").kozgo 個人情報保護について
 
 		span ©2016 Sample
