--- a/_pugfiles/side-bar.pug
+++ b/_pugfiles/side-bar.pug
@@ -1,10 +1,10 @@
 .side-bar-container
-	a(href="#").square-banner
+	a(href="new-page.html").square-banner
 		p Dummy banner
 
 	img(src="assets/img/title-news.png" width="300px" height="30px").recommend
 
-	a(href="#").blog-post.first
+	a(href="new-page.html").blog-post.first
 
 		.blog-image
 			img(src="assets/img/article-image.png")
@@ -17,7 +17,7 @@
 			.date
 				p 2016.03.26
 
-	a(href="#").blog-post.second
+	a(href="new-page.html").blog-post.second
 
 		.blog-image
 			img(src="assets/img/article-image.png")
@@ -30,7 +30,7 @@
 			.date
 				p 2016.03.26
 
-	a(href="#").blog-post.last
+	a(href="new-page.html").blog-post.last
 
 		.blog-image
 			img(src="assets/img/article-image.png")
@@ -43,11 +43,11 @@
 			.date
 				p 2016.03.26
 
-	a(href="#").rectangle-banner
+	a(href="new-page.html").rectangle-banner
 		p Dummy banner
 
-	a(href="#").rectangle-banner
+	a(href="new-page.html").rectangle-banner
 		p Dummy banner
 
-	a(href="#").rectangle-banner
+	a(href="new-page.html").rectangle-banner
 		p Dummy banner
