--- a/_layouts/new.html
+++ b/_layouts/new.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     
     <body>
@@ -15,5 +15,5 @@
         {%include footer.html%}
     </body>
     <!--Custom JS-->
-        <script type="text/javascript" src="{{site.baseurl}}/assets/js/slider.js"></script>
+        <script type="text/javascript" src="assets/js/slider.js"></script>
 </html>
